<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".RegistroLimpiezaAdmin">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/listViewRegistroLimpiezaAdmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <TextView
            android:id="@+id/numHabitacion"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/num_habitacion"
            android:textAlignment="center"></TextView>

        <TextView
            android:id="@+id/planta"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/num_planta"></TextView>

        <TextView
            android:id="@+id/nombre"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/nombre"></TextView>

        <TextView
            android:id="@+id/apellidos"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/apellido"></TextView>

    </LinearLayout>

    <ListView
        android:id="@+id/listViewRegistroLimpiezaAdmin"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonVolverRegistros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="650dp"
        android:onClick="retroceder"
        android:text="@string/volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>