<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DarDeBajaClientes"
    android:background="@color/teal_200"
    android:id="@+id/viewDarDeBajaClientes">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:onClick="cerrarTeclado"
    tools:context=".DarDeBajaClientes">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNHabitacion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="224dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introducirHabitacion" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/imageButtonBuscarHabitacion2"
        android:layout_width="84dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="40dp"
        android:onClick="buscarHabitacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/buscar" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/listViewCliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/numeroHabitacion"
            android:layout_width="123dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/num_habitacion"></TextView>

        <TextView
            android:id="@+id/nombre"
            android:layout_width="123dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/nombre"></TextView>

        <TextView
            android:id="@+id/apellidos"
            android:layout_width="123dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/apellido"></TextView>

    </LinearLayout>

    <ListView
        android:id="@+id/listViewPersonas"
        android:layout_width="369dp"
        android:layout_height="473dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <Button
        android:id="@+id/buttonDarDeBajaClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="124dp"
        android:onClick="darDeBaja"
        android:text="@string/darBaja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewPersonas"
        app:layout_constraintVertical_bias="0.456" />
</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/drawer_header"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"/>

</androidx.drawerlayout.widget.DrawerLayout>