<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InsertaDatosAdmin">


    <TextView
        android:id="@+id/textViewFechaEntrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/fecha_entrada"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageViewCalendario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="escogerFecha"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="150dp"
        app:srcCompat="@drawable/calendario"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/textViewVistaFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPuesto"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/puesto"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPlanta"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/num_planta"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

</FrameLayout>