<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".RegistrosLimpieza"
    android:id="@+id/viewRegistros">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrosLimpieza">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="369dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintBottom_toTopOf="@+id/listViewRegistros"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/registro"
                android:layout_width="123dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/num_habitacion"
                android:textAlignment="center"></TextView>

            <TextView
                android:id="@+id/numHabitacion"
                android:layout_width="123dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/num_planta"></TextView>

            <TextView
                android:id="@+id/estado"
                android:layout_width="123dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/estado"></TextView>

        </LinearLayout>

        <ListView
            android:id="@+id/listViewRegistros"
            android:layout_width="369dp"
            android:layout_height="620dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/drawer_header"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"/>

</androidx.drawerlayout.widget.DrawerLayout>