<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformacionClientes"
    android:background="@color/teal_200"
    android:id="@+id/viewInformacionClientes">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="cerrarTeclado"
    tools:context=".InformacionClientes">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/listViewCliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/numeroHabitacion"
            android:layout_width="123dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/num_habitacion"
            android:textAlignment="center"></TextView>

        <TextView
            android:id="@+id/nombre"
            android:layout_width="123dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/nombre"></TextView>

        <TextView
            android:id="@+id/apellidos"
            android:layout_width="123dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/apellido"></TextView>

    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButtonBuscarCliente"
        android:layout_width="84dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="40dp"
        android:onClick="mostrarInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/buscar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutFiltroDni"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="211dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/dni" />
    </com.google.android.material.textfield.TextInputLayout>

    <ListView
        android:id="@+id/listViewCliente"
        android:layout_width="369dp"
        android:layout_height="305dp"
        android:layout_marginTop="172dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listViewInfoClientes"
        android:layout_width="369dp"
        android:layout_height="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewCliente" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/drawer_header"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"/>

</androidx.drawerlayout.widget.DrawerLayout>